--- a/Runtime/Varjo.XR.asmdef
+++ b/Runtime/Varjo.XR.asmdef
@@ -1,26 +1,18 @@
 {
     "name": "Varjo.XR",
+    "rootNamespace": "",
     "references": [
-        "Unity.XR.Management"
+        "Unity.XR.Management",
+        "Unity.XR.ARSubsystems",
+        "Unity.XR.ARFoundation"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
+    "allowUnsafeCode": true,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [
-        {
-            "name": "com.unity.render-pipelines.high-definition",
-            "expression": "",
-            "define": "HDRP"
-        },
-        {
-            "name": "com.unity.render-pipelines.high-definition",
-            "expression": "8.0.0",
-            "define": "HDRP_8_OR_NEWER"
-        }
-    ],
+    "versionDefines": [],
     "noEngineReferences": false
 }
